--- a/react-app/src/components/Books/books.css
+++ b/react-app/src/components/Books/books.css
@@ -2,3 +2,107 @@
     height:150px;
     width:100px;
 }
+
+.highestRated{
+    display:flex;
+    flex-direction: row;
+    gap:20px;
+    overflow:hidden;
+    overflow-x: scroll;
+}
+
+/* .highestRated::-webkit-scrollbar{
+    display:none
+} */
+.cheese{
+    display:flex;
+    flex-direction: row;
+    gap:20px;
+}
+
+.slider {
+    width: 100%;
+    height: 650px;
+    /* position: relative; */
+    overflow: hidden;  /* <===  */
+    border-radius: 15px;
+
+  }
+  .slides{
+    width:500%;
+    height:500px;
+    display:flex;
+
+  }
+.slides input{
+    display:none;
+}
+  .slide {
+    width:20%;
+    transition:2s;
+
+  }
+
+  .slide img {
+    width: 100%;
+    height: 650px;
+    object-fit: fill;
+
+  }
+
+  .navigation-manual{
+    position:absolute;
+    width:800px;
+    margin-top:620px;
+    margin-left:15%;
+    display:flex;
+    align-items:center;
+    justify-content:center
+  }
+  .manual-btn{
+    border:2px solid white;
+    padding:5px;
+    border-radius:10px;
+    cursor:pointer;
+    transition:1s
+  }
+  .manual-btn:not(:last-child){
+    margin-right:40px;
+  }
+  .manual-btn:hover{
+    background:white;
+  }
+
+  #radio1:checked ~ .first{
+    margin-left:0
+  }
+  #radio2:checked ~ .first{
+    margin-left:-20%
+  }
+  #radio3:checked ~ .first{
+    margin-left:-40%
+  }
+  #radio4:checked ~ .first{
+    margin-left:-60%
+  }
+  #radio5:checked ~ .first{
+    margin-left:-80%
+  }
+.navigation-auto{
+    position:absolute;
+    display:flex;
+    width:800px;
+    justify-content:center;
+    margin-top:40px;
+}
+.navigation-auto div{
+    /* border: 2px solid blue; */
+    padding:5px;
+    border-radius:10px;
+    transition:1s;
+    animation: 3s linear 1s infinite alternate slidein;
+}
+
+.navigation-auto div:not(:last-child){
+    margin-right:40px;
+}
