--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -10,3 +10,24 @@
   width:140px;
  height:60px
 }
+
+.profile-dropdown{
+  /* position: absolute; */
+  background-color: #f1f1f1;
+  /* right:48px;
+  padding: 25px;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  align-content:center;
+  justify-content:center; */
+  /* z-index:1; */
+  /* border-radius:10%; */
+}
+.navLinksCont{
+  display:flex;
+  justify-content: space-evenly;
+}
+.navLinks2{
+  cursor:pointer;
+}
