--- a/react-app/src/components/Books/books.css
+++ b/react-app/src/components/Books/books.css
@@ -2,28 +2,39 @@
     height:150px;
     width:100px;
 }
-
+.shelfCont{
+  display:flex;
+  flex-direction:column;
+}
 .highestRated{
     display:flex;
     flex-direction: row;
     gap:20px;
     overflow:hidden;
     overflow-x: scroll;
+    margin:40px 10px;
 }
 
-/* .highestRated::-webkit-scrollbar{
-    display:none
-} */
-.cheese{
-    display:flex;
-    flex-direction: row;
-    gap:20px;
+
+.highestRated::-webkit-scrollbar{
+
+  border-radius: 5px;
+  background:rgb(243, 238, 238);
+  width: 10px;
 }
+
+.highestRated::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  width: 10%;
+    /* height: 200px; */
+  background:darkgrey;
+}
+
 
 .slider {
     width: 100%;
-    height: 650px;
-    /* position: relative; */
+    height: 580px;
+    position: relative;
     overflow: hidden;  /* <===  */
     border-radius: 15px;
 
@@ -45,7 +56,7 @@
 
   .slide img {
     width: 100%;
-    height: 650px;
+    height: 580px;
     object-fit: fill;
 
   }
@@ -53,28 +64,26 @@
   .navigation-manual{
     position:absolute;
     width:800px;
-    margin-top:620px;
-    margin-left:15%;
+    margin-top:550px;
+    margin-left:20%;
     display:flex;
     align-items:center;
     justify-content:center
   }
   .manual-btn{
-    border:2px solid white;
+    /* border:2px solid white; */
     padding:5px;
     border-radius:10px;
-    cursor:pointer;
+    /* cursor:pointer; */
     transition:1s
   }
   .manual-btn:not(:last-child){
     margin-right:40px;
   }
-  .manual-btn:hover{
-    background:white;
-  }
+
 
   #radio1:checked ~ .first{
-    margin-left:0
+    margin-left:0;
   }
   #radio2:checked ~ .first{
     margin-left:-20%
@@ -93,16 +102,34 @@
     display:flex;
     width:800px;
     justify-content:center;
-    margin-top:40px;
+    margin-top:550px;
+    margin-left:20%;
 }
 .navigation-auto div{
-    /* border: 2px solid blue; */
+    /* border: 2px solid white; */
     padding:5px;
     border-radius:10px;
     transition:1s;
-    animation: 3s linear 1s infinite alternate slidein;
+    /* animation: 3s linear 1s infinite alternate slidein; */
 }
 
 .navigation-auto div:not(:last-child){
     margin-right:40px;
 }
+
+/* #radio1:checked ~ .navigation-auto .auto-btn1{
+  background:white;
+}
+
+#radio2:checked ~ .navigation-auto .auto-btn2{
+  background:white;
+}
+#radio3:checked ~ .navigation-auto .auto-btn3{
+  background:white;
+}
+#radio4:checked ~ .navigation-auto .auto-btn4{
+  background:white;
+}
+#radio5:checked ~ .navigation-auto .auto-btn5{
+  background:white;
+} */
