--- a/react-app/src/components/SearchBar/searchBar.css
+++ b/react-app/src/components/SearchBar/searchBar.css
@@ -1,17 +1,22 @@
 .dataResult {
-    margin-top:5px;
-    width:300px;
+    position:absolute;
+    margin-top:0px;
+    margin-left:23px;
+    width:400px;
     height:200px;
     overflow:hidden;
     overflow-y:auto;
     box-shadow:rgba(0,0,0,0.35) 0px 5px 15px;
-    z-index: auto;
+    z-index: 200;
+    background:white;
+    border-radius: 5px;
+    /* position:fixed; */
 }
 
 
-/* .dataResult::-webkit-scrollbar{
+.dataResult::-webkit-scrollbar{
     display:none
-} */
+}
 
 .dataResult .dataItem {
     width:100%;
@@ -30,4 +35,26 @@
 
 .search{
     z-index:auto
+}
+.searchInputs{
+    /* border:1px solid black; */
+    position:relative;
+    margin-left:20px;
+}
+.fa-magnifying-glass{
+    position:relative;
+    margin-left:-22px;
+    align-items:center;
+    font-size:18px;
+}
+.fa-x{
+    position:relative;
+    margin-left:-22px;
+    align-items:center;
+}
+.textbox{
+    font-size:18px;
+    cursor:pointer;
+    width:400px;
+    border-radius:5px;
 }
