--- a/react-app/src/components/Books/books.css
+++ b/react-app/src/components/Books/books.css
@@ -1,135 +1,141 @@
 .booksImageHomepage{
-    height:150px;
-    width:100px;
+  height:150px;
+  width:100px;
 }
 .shelfCont{
-  display:flex;
-  flex-direction:column;
+display:flex;
+flex-direction:column;
 }
 .highestRated{
-    display:flex;
-    flex-direction: row;
-    gap:20px;
-    overflow:hidden;
-    overflow-x: scroll;
-    margin:40px 10px;
+  display:flex;
+  flex-direction: row;
+  gap:20px;
+  overflow:hidden;
+  overflow-x: scroll;
+  margin:40px 10px;
 }
 
 
 .highestRated::-webkit-scrollbar{
 
-  border-radius: 5px;
-  background:rgb(243, 238, 238);
-  width: 10px;
+border-radius: 5px;
+background:rgb(243, 238, 238);
+width: 10px;
 }
 
 .highestRated::-webkit-scrollbar-thumb {
-  border-radius: 5px;
-  width: 10%;
-    /* height: 200px; */
-  background:darkgrey;
+border-radius: 5px;
+width: 10%;
+  /* height: 200px; */
+background:darkgrey;
 }
 
 
 .slider {
-    width: 100%;
-    height: 580px;
-    position: relative;
-    overflow: hidden;  /* <===  */
-    border-radius: 15px;
+  width: 100%;
+  height: 580px;
+  position: relative;
+  overflow: hidden;
+  border-radius: 15px;
 
-  }
-  .slides{
-    width:500%;
-    height:500px;
-    display:flex;
-
-  }
-.slides input{
-    display:none;
 }
-  .slide {
-    width:20%;
-    transition:2s;
+.slides{
+  width:500%;
+  height:500px;
+  display:flex;
 
-  }
+}
+.slides input{
+  display:none;
+}
+.slide {
+  width:20%;
+  transition:2s;
 
-  .slide img {
-    width: 100%;
-    height: 580px;
-    object-fit: fill;
+}
 
-  }
+.slide img {
+  width: 100%;
+  height: 580px;
+  object-fit: fill;
 
-  .navigation-manual{
-    position:absolute;
-    width:800px;
-    margin-top:550px;
-    margin-left:20%;
-    display:flex;
-    align-items:center;
-    justify-content:center
-  }
-  .manual-btn{
-    /* border:2px solid white; */
-    padding:5px;
-    border-radius:10px;
-    /* cursor:pointer; */
-    transition:1s
-  }
-  .manual-btn:not(:last-child){
-    margin-right:40px;
-  }
+}
 
-
-  #radio1:checked ~ .first{
-    margin-left:0;
-  }
-  #radio2:checked ~ .first{
-    margin-left:-20%
-  }
-  #radio3:checked ~ .first{
-    margin-left:-40%
-  }
-  #radio4:checked ~ .first{
-    margin-left:-60%
-  }
-  #radio5:checked ~ .first{
-    margin-left:-80%
-  }
+.navigation-manual{
+  position: absolute;
+  width: 800px;
+  margin-top: 250px;
+  margin-left: -370px;
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
+  flex-direction: column;
+  gap: 10px;
+}
 .navigation-auto{
-    position:absolute;
-    display:flex;
-    width:800px;
-    justify-content:center;
-    margin-top:550px;
-    margin-left:20%;
+  position: absolute;
+  width: 800px;
+  margin-top: 250px;
+  margin-left: -370px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+}
+.manual-btn{
+  border:2px solid white;
+  padding:5px;
+  border-radius:10px;
+  cursor:pointer;
+  transition:1s
+}
+/* .manual-btn:not(:last-child){ */
+  /* margin-left:40px; */
+/* } */
+
+
+#radio1:checked ~ .first{
+  margin-left:0;
+}
+#radio2:checked ~ .first{
+  margin-left:-20%
+}
+#radio3:checked ~ .first{
+  margin-left:-40%
+}
+#radio4:checked ~ .first{
+  margin-left:-60%
+}
+#radio5:checked ~ .first{
+  margin-left:-80%
 }
 .navigation-auto div{
-    /* border: 2px solid white; */
-    padding:5px;
-    border-radius:10px;
-    transition:1s;
-    /* animation: 3s linear 1s infinite alternate slidein; */
+  border: 2px solid white;
+  padding:5px;
+  border-radius:10px;
+  transition:1s;
+  animation: 3s linear 1s infinite alternate slidein;
 }
 
-.navigation-auto div:not(:last-child){
-    margin-right:40px;
-}
+/* .navigation-auto div:not(:last-child){
+  margin-right:40px;
+} */
 
-/* #radio1:checked ~ .navigation-auto .auto-btn1{
-  background:white;
+
+
+#radio1:checked ~ .navigation-auto .auto-btn1{
+background:white;
 }
 
 #radio2:checked ~ .navigation-auto .auto-btn2{
-  background:white;
+background:white;
 }
 #radio3:checked ~ .navigation-auto .auto-btn3{
-  background:white;
+background:white;
 }
 #radio4:checked ~ .navigation-auto .auto-btn4{
-  background:white;
+background:white;
 }
 #radio5:checked ~ .navigation-auto .auto-btn5{
-  background:white;
-} */
+background:white;
+}
