--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -1,5 +1,13 @@
 .profile-dropdown {
   position: absolute;
+  background-color: #f1f1f1;
+    /* right:170px; */
+    top:45px;
+    padding: 5px;
+    display:flex;
+    flex-direction:column;
+    z-index:1;
+    border-radius:10%;
 }
 
 .hidden {
@@ -11,19 +19,6 @@
  height:60px
 }
 
-.profile-dropdown{
-  position: absolute;
-    background-color: #f1f1f1;
-    right:48px;
-    padding: 25px;
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-    align-content:center;
-    justify-content:center;
-    z-index:1;
-    border-radius:10%;
-}
 .navLinksCont{
   display:flex;
   justify-content: space-evenly;
@@ -41,6 +36,7 @@ text-decoration:underline;
   justify-content: space-evenly;
   align-items: center;
   margin:20px;
+  flex-wrap:wrap;
 }
 .cartInNav{
   display:flex;
@@ -73,4 +69,46 @@ text-decoration:underline;
 }
 .hidden{
   display:none;
+}
+
+.fa-user-circle{
+  font-size:20px;
+}
+.holderoffaceicon{
+  border:none;
+  background:transparent;
+cursor:pointer;
+}
+.buttons-profile{
+  cursor:pointer;
+  border:none;
+  width:90px;
+  margin:5px;
+}
+
+@media only screen and (max-width: 737px) {
+  .profile-dropdown {
+    position: absolute;
+    background-color: #f1f1f1;
+      /* right:170px; */
+      top:85px;
+      padding: 15px;
+      display:flex;
+      flex-direction:column;
+      /* z-index:1; */
+      border-radius:10%;
+  }
+}
+@media only screen and (max-width: 595px) {
+  .profile-dropdown {
+    position: absolute;
+    background-color: #f1f1f1;
+      /* right:170px; */
+      top:115px;
+      padding: 15px;
+      display:flex;
+      flex-direction:column;
+      /* z-index:1; */
+      border-radius:10%;
+  }
 }
