--- a/react-app/src/components/LoginFormModal/LoginForm.css
+++ b/react-app/src/components/LoginFormModal/LoginForm.css
@@ -1,10 +1,12 @@
 .loginBtn{
     margin:20px;
-    padding:0px 30px;
+    padding:0px 60px;
     display:flex;
     flex-direction:column;
     align-items:center;
     border-radius:15%;
+    width:350px;
+    height:400px
 }
 .thisistheform{
     display:flex;
@@ -39,7 +41,7 @@
     display:flex;
     flex-direction:column;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
 }
 /* .errors{
   color:red;
