--- a/react-app/src/components/SignupFormModal/SignupForm.css
+++ b/react-app/src/components/SignupFormModal/SignupForm.css
@@ -4,6 +4,7 @@
     display:flex;
     flex-direction:column;
     align-items:center;
+    width:440px;
     /* background:black; */
     /* border:1px solid black; */
 
