--- a/react-app/src/components/SingleGenre/singleGenre.css
+++ b/react-app/src/components/SingleGenre/singleGenre.css
@@ -1,61 +1,76 @@
 .buttonFilterGenreCont{
-    display:flex;
-    justify-content: space-evenly;
+  display:flex;
+  justify-content: space-evenly;
 }
 .singlegenreheader{
-    display:flex;
-    justify-content: center;
+  display:flex;
+  justify-content: center;
 }
 
 .dropBtnt{
-    background-color: blue;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
+  background-color: blue;
+color: white;
+padding: 16px;
+font-size: 16px;
+border: none;
+cursor: pointer;
 }
 .buttonFilterGenreCont{
-    position: relative;
-    display: inline-block;
+  position: relative;
+  display: inline-block;
 }
 
 .dropdown-content{
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
 }
 .buttonFilterGenre{
-        color: black;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-        cursor:pointer;
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+      cursor:pointer;
 }
 .buttonFilterGenre1{
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  cursor:pointer;
+color: black;
+padding: 12px 16px;
+text-decoration: none;
+display: block;
+cursor:pointer;
 }
 .buttonFilterGenre:hover {background-color: #f1f1f1}
 
 .buttonFilterGenreCont:hover .dropdown-content {
-    display: block;
-  }
+  display: block;
+}
 
-  .buttonFilterGenreCont:hover .dropBtnt {
-    background-color: blue;
-  }
+.buttonFilterGenreCont:hover .dropBtnt {
+  background-color: blue;
+}
 .holdsthebooksforgenre{
-  display:flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
-  gap:30px;
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+justify-content: flex-start;
+align-items: center;
+grid-gap: 30px;
+gap: 30px;
+margin: auto;
+padding: 30px;
+}
+.bookandreviewstarsgenre{
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+.buttonFilterGenre1{
+display:flex;
+}
+.sortingstuffout{
+display: flex;
+margin-bottom:20px;
 }
