--- a/react-app/src/components/Books/books.css
+++ b/react-app/src/components/Books/books.css
@@ -13,10 +13,12 @@ flex-direction:column;
   gap:20px;
   overflow:hidden;
   overflow-x: scroll;
-  margin:40px 10px;
+  margin: 15px 10px;
 }
 
-
+.bannerforsales{
+  width:-webkit-fill-available;
+}
 .highestRated::-webkit-scrollbar{
 
 border-radius: 5px;
@@ -33,11 +35,12 @@ background:darkgrey;
 
 
 .slider {
-  width: 100%;
+  width:-webkit-fill-available;
   height: 580px;
   position: relative;
   overflow: hidden;
   border-radius: 15px;
+  margin-bottom:15px;
 
 }
 .slides{
@@ -139,4 +142,44 @@ background:white;
 }
 #radio5:checked ~ .navigation-auto .auto-btn5{
 background:white;
+}
+
+.fheadersforscrolls{
+  font-size: 19px;
+  margin-left:10px;
+  margin-top:20px;
+}
+
+
+
+
+.LandingDevName {
+  padding: 10px;
+
+}
+
+.myinfocont{
+  border-top:1px solid black;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+}
+.headersh5{
+  display:flex;
+  flex-direction:row;
+  /* color:red; */
+  /* width: 700px; */
+}
+.githibbutton{
+  background:transparent;
+  border:none;
+  font-size:20px;
+  cursor:pointer;
+  padding:1px 3px;
+}
+.githibbutton:hover{
+background:black;
+color:white;
+border-radius:5px;
+padding:1px 3px;
 }
