--- a/react-app/src/components/Books/books.css
+++ b/react-app/src/components/Books/books.css
@@ -33,7 +33,9 @@ width: 10%;
 background:darkgrey;
 }
 
-
+.first{
+cursor:pointer
+}
 .slider {
   width:-webkit-fill-available;
   height: 580px;
@@ -47,7 +49,6 @@ background:darkgrey;
   width:500%;
   height:500px;
   display:flex;
-
 }
 .slides input{
   display:none;
@@ -55,6 +56,7 @@ background:darkgrey;
 .slide {
   width:20%;
   transition:2s;
+  cursor:pointer
 
 }
 
@@ -75,6 +77,7 @@ background:darkgrey;
   /* justify-content: center; */
   flex-direction: column;
   gap: 10px;
+  /* font-size:500px */
 }
 .navigation-auto{
   position: absolute;
