--- a/react-app/src/components/SingleGenre/singleGenre.css
+++ b/react-app/src/components/SingleGenre/singleGenre.css
@@ -15,7 +15,7 @@ font-size: 14px;
 border: none;
 cursor: pointer;
 border-radius:5px;
-margin-left:30px
+/* margin-left:30px */
 }
 .buttonFilterGenreCont{
   position: relative;
@@ -66,7 +66,7 @@ align-items: center;
 grid-gap: 30px;
 gap: 30px;
 margin: auto;
-padding: 30px;
+/* padding: 30px; */
 }
 .bookandreviewstarsgenre{
 display: flex;
@@ -90,4 +90,10 @@ align-items: center;
   height:180px;
   width:110px;
   cursor:pointer;
+}
+.allbooksofgenrecont{
+  display:flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
 }
