--- a/react-app/src/components/SingleGenre/singleGenre.css
+++ b/react-app/src/components/SingleGenre/singleGenre.css
@@ -15,7 +15,7 @@ font-size: 14px;
 border: none;
 cursor: pointer;
 border-radius:5px;
-/* margin-left:30px */
+margin-left:30px
 }
 .buttonFilterGenreCont{
   position: relative;
@@ -66,7 +66,7 @@ align-items: center;
 grid-gap: 30px;
 gap: 30px;
 margin: auto;
-/* padding: 30px; */
+padding: 30px;
 }
 .bookandreviewstarsgenre{
 display: flex;
@@ -90,10 +90,48 @@ align-items: center;
   height:180px;
   width:110px;
   cursor:pointer;
+  opacity: 1;
+  transition: .5s ease;
+  backface-visibility: hidden;
+  margin-bottom:5px;
 }
 .allbooksofgenrecont{
   display:flex;
   flex-direction: column;
   flex-wrap: wrap;
   align-content: center;
+}
+.bookandreviewstarsgenre {
+  position: relative;
+  /* width: 50%; */
+}
+
+
+.middleQuick {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 83%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+
+.bookandreviewstarsgenre:hover .middleQuick {
+  opacity: 1;
+}
+
+.textQuick {
+  background-color: rgba(255, 255, 255, 0.9);
+  border:1px solid black;
+  border-radius:5px;
+  color: black;
+  font-size: 16px;
+  /* padding: 2px 38px; */
+  cursor:pointer;
+  display:flex;
+  width:100px;
+  justify-content: center;
 }
