--- a/react-app/src/components/SearchBar/searchBar.css
+++ b/react-app/src/components/SearchBar/searchBar.css
@@ -1,8 +1,8 @@
 .dataResult {
     position:absolute;
     margin-top:0px;
-    margin-left:23px;
-    width:400px;
+    margin-left:30px;
+    width:390px;
     height:200px;
     overflow:hidden;
     overflow-y:auto;
@@ -23,7 +23,8 @@
     height:50px;
     display:flex;
     align-items:center;
-    z-index:auto
+    z-index:auto;
+    margin-left:5px;
 
 }
 
@@ -45,7 +46,7 @@
     position:relative;
     margin-left:-22px;
     align-items:center;
-    font-size:18px;
+    font-size:16px;
 }
 .fa-x{
     position:relative;
@@ -56,5 +57,6 @@
 .textbox{
     font-size:18px;
     width:400px;
-    border-radius:5px;
+    border-radius:25px;
+    text-align:center;
 }
