--- a/react-app/src/components/SearchBar/searchBar.css
+++ b/react-app/src/components/SearchBar/searchBar.css
@@ -24,7 +24,7 @@
     display:flex;
     align-items:center;
     z-index:auto;
-    margin-left:5px;
+    padding-left: 5px;
 
 }
 
@@ -55,7 +55,7 @@
     align-items:center;
 }
 .textbox{
-    font-size:18px;
+    font-size:16px;
     width:400px;
     border-radius:25px;
     text-align:center;
