--- a/react-app/src/components/SingleGenre/singleGenre.css
+++ b/react-app/src/components/SingleGenre/singleGenre.css
@@ -61,7 +61,7 @@ cursor:pointer;
 display: flex;
 flex-direction: row;
 flex-wrap: wrap;
-justify-content: flex-start;
+justify-content: center;
 align-items: center;
 grid-gap: 30px;
 gap: 30px;
