--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -9,7 +9,19 @@
     /* z-index:1; */
     border-radius:10%;
 }
+.manage-spots-border{
 
+border-bottom:1px solid grey;
+text-align:center;
+padding:3px;
+}
+.manage-spot{
+  color:black;
+  text-decoration:none;
+}
+.manage-spot:hover{
+  text-decoratioN:underline;
+}
 .hidden {
   display: none;
 }
