--- a/react-app/src/components/WishLists/wishlist.css
+++ b/react-app/src/components/WishLists/wishlist.css
@@ -55,3 +55,30 @@
     font-size:16px;
     margin-bottom:10px;
 }
+.editanddeletecontreview2{
+  display:flex;
+  padding:0px 50px;
+  gap:10px;
+  align-items: center;
+}
+.addtocart2{
+  /* background:rgb(23, 98, 227); */
+  /* color:white; */
+  border:none;
+  border-radius:5px;
+  padding:5px;
+  cursor:pointer;
+}
+.addtocart2:hover{
+  background: #0575E6;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #021B79, #0575E6);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to bottom, #021B79, #0575E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  cursor:pointer;
+    color:white;
+}
+.addedtocartmess{
+  font-size: 15px;
+  display: flex;
+  width: 120px;
+  align-items: center;
+}
